# UbiBelPMF_2024

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  meson.build
data/: default_saved_scene.json  editor_test_save.json  pacman.ini  pacmanMaze.txt  pacmanTim.pptx  redsnake.ini
data/animations/AcademicLife/: IDLE.json  RUN_LEFT.json  RUN_RIGHT.json
data/animations/bullet_hell/: IDLE.json
data/animations/player/: player_attack_down.json  player_attack_right.json  player_attack_up.json  player_dead.json  player_death.json  player_idle_back.json  player_idle_front.json  player_idle_right.json  player_move_down.json  player_move_right.json  player_move_up.json  random.json
data/animations/skeleton/: skeleton_attack_down.json  skeleton_attack_right.json  skeleton_attack_up.json  skeleton_damaged_down.json  skeleton_damaged_right.json  skeleton_damaged_up.json  skeleton_dead.json  skeleton_death.json  skeleton_idle_back.json  skeleton_idle_front.json  skeleton_idle_right.json  skeleton_move_down.json  skeleton_move_right.json  skeleton_move_up.json
data/input-contexts/: asdwspace-reverse.json  asdwspace.json  skeleton_arrows-reverse.json  skeleton_arrows.json
data/spritesheets/: player.spritesheet  player_anim.spritesheet  skeleton.spritesheet
data/textures/Esccape/: player_anim.spritesheet
docs/: setting_up_linux.md  setting_up_windows.md
libs/entt/single_include/entt/: entt.hpp
libs/simpleini/tests/: tests.vcxproj
projects/dagger/: deadend_obstacle.cpp  player.cpp  player.h  red_snake_main.cpp  red_snake_main.h  snake.cpp  snake.h  snake_playerinput.cpp  snake_playerinput.h
source/dagger/: main.cpp
source/dagger/core/: audio.cpp  audio.h  audio_linux.cpp  audio_win.cpp  core.h  engine.cpp  engine.h  game.cpp  game.h  savegame.h  view_ptr.h
source/dagger/core/game/: finite_state_machine.h  transforms.cpp
source/dagger/core/graphics/: gui.cpp  sprite_render.cpp  text.cpp  text.h  texture.h  textures.cpp  tool_render.cpp  tool_render.h  window.cpp
source/dagger/core/input/: inputs.cpp  inputs.h
source/dagger/gameplay/academic_life/: academic_life_logic.cpp  academic_life_logic.h  academic_life_main.cpp  academic_life_main.h  academic_player.cpp  academic_player.h  enumi.h  espb.cpp  espb.h  exprtk.hpp  falling_entity.cpp  falling_entity.h  game_state.cpp  game_state.h  health.cpp  health.h  main_menu.cpp  main_menu.h  score.h  score_entity.cpp  score_entity.h
source/dagger/gameplay/bober_kuvar/: Bullet.h  (+32 more)
source/dagger/tools/: console.h  diagnostics.cpp  plotvar.h  toolmenu.h
(+118 files in other folders)
